--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
             fetch("/", {
                 method: "POST",
                 headers: { "Content-Type": "application/x-www-form-urlencoded" },
-                body: new URLSearchParams(new FormData(document.querySelector('form[name="waitlist"]'))).toString()
+                body: new URLSearchParams(formData).toString()
             }).then(() => {
                 showPage('success-modal');
                 form.reset();
