--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
             right: 0;
             bottom: 0;
             background: rgba(10, 10, 10, 0.8);
-            backdrop-filter: blur(20px);
-            -webkit-backdrop-filter: blur(20px);
+            backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
             z-index: 100;
             opacity: 0;
             visibility: hidden;
@@ -152,6 +152,10 @@
             display: flex;
             align-items: center;
             justify-content: center;
+        }
+        /* UPDATE: Added is-scrollable class to fix legal page scrolling on mobile */
+        .overlay-page.is-scrollable {
+            align-items: flex-start;
         }
         .overlay-page.active {
             opacity: 1;
@@ -324,7 +328,6 @@
 
         <!-- Hero Section -->
         <main class="container mx-auto px-6 text-center fade-in">
-            <!-- FIX: Removed duplicate H1 headline -->
             <h2 class="text-4xl md:text-6xl font-bold leading-tight mb-8">Deconstruct Your Ambition. <span class="accent-glow-text">Engineer Your Ascent.</span></h2>
             
             <div class="scene">
@@ -373,7 +376,7 @@
             </div>
         </section>
 
-        <!-- ADDITION: FAQ Section -->
+        <!-- FAQ Section -->
         <section class="container mx-auto px-6 mt-28 md:mt-40 fade-in">
             <div class="text-center mb-16">
                 <h3 class="text-3xl md:text-4xl font-bold text-slate-50">Frequently Asked Questions</h3>
@@ -395,6 +398,16 @@
                     </summary>
                     <div class="faq-answer mt-4">
                         <p>It's for entrepreneurs, creatives, students, athletes, and anyone who wants to apply a systematic, mission-oriented approach to their personal and professional goals. If you have a big objective but aren't sure where to start, Operator Uplift is designed for you.</p>
+                    </div>
+                </details>
+                <!-- UPDATE: Rephrased AI models FAQ -->
+                <details class="glass-card p-6 rounded-lg group">
+                    <summary class="font-semibold text-lg text-slate-200 cursor-pointer list-none flex justify-between items-center">
+                        What kind of AI does this use?
+                        <svg class="w-5 h-5 group-open:rotate-180 transition-transform" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" /></svg>
+                    </summary>
+                    <div class="faq-answer mt-4">
+                        <p>Operator Uplift is powered by a sophisticated AI engine that utilizes an ensemble of best-in-class language and reasoning models. This multi-model approach allows us to analyze goals from different perspectives, ensuring a robust, comprehensive, and highly-effective strategic plan tailored to your unique ambition.</p>
                     </div>
                 </details>
                 <details class="glass-card p-6 rounded-lg group">
@@ -441,11 +454,12 @@
     </div>
 
     <!-- Legal Pages & Success Modal -->
-    <div id="terms" class="overlay-page legal-page">
+    <!-- UPDATE: Added 'is-scrollable' class to legal pages -->
+    <div id="terms" class="overlay-page legal-page is-scrollable">
         <div class="legal-content container mx-auto max-w-4xl relative">
             <button class="close-overlay-btn fixed top-8 right-8 text-white text-4xl">&times;</button>
             <h2>Terms of Service</h2>
-            <p>Last updated: July 23, 2025</p>
+            <p>Last updated: July 27, 2025</p>
             <p>Welcome to Operator Uplift. These Terms of Service ("Terms") govern your access to and use of the Operator Uplift website and any services offered (collectively, the "Service"). By accessing or using the Service, you agree to be bound by these Terms.</p>
             <h3>1. The Service</h3>
             <p>Operator Uplift is a pre-launch project. The Service is provided on an "as is" and "as available" basis. We provide information about our upcoming product and collect email addresses for a waitlist. We do not make any warranties about the completeness, reliability, or accuracy of this information. The features and functionality of the final product are subject to change.</p>
@@ -460,15 +474,15 @@
             <h3>6. Changes to Terms</h3>
             <p>We reserve the right to modify these Terms at any time. We will notify you of any changes by posting the new Terms on this page. Your continued use of the Service after any such changes constitutes your acceptance of the new Terms.</p>
             <h3>7. Contact Us</h3>
-            <p>If you have any questions about these Terms, please contact us at <a href="mailto:contact@operatoruplift.com">contact@operatoruplift.com</a>.</p>
+            <p>If you have any questions about these Terms, please contact us at <a href="mailto:operatoruplift@gmail.com">operatoruplift@gmail.com</a>.</p>
         </div>
     </div>
 
-    <div id="privacy" class="overlay-page legal-page">
+    <div id="privacy" class="overlay-page legal-page is-scrollable">
         <div class="legal-content container mx-auto max-w-4xl relative">
             <button class="close-overlay-btn fixed top-8 right-8 text-white text-4xl">&times;</button>
             <h2>Privacy Policy</h2>
-            <p>Last updated: July 23, 2025</p>
+            <p>Last updated: July 27, 2025</p>
             <p>This Privacy Policy describes how Operator Uplift ("we," "us," or "our") collects, uses, and discloses your information when you use our website (the "Service").</p>
             <h3>1. Information We Collect</h3>
             <p>We collect information you provide directly to us. The only personal information we currently collect is your email address when you voluntarily sign up for our waitlist.</p>
@@ -491,11 +505,11 @@
         </div>
     </div>
 
-    <div id="cookies" class="overlay-page legal-page">
+    <div id="cookies" class="overlay-page legal-page is-scrollable">
         <div class="legal-content container mx-auto max-w-4xl relative">
             <button class="close-overlay-btn fixed top-8 right-8 text-white text-4xl">&times;</button>
             <h2>Cookie Policy</h2>
-            <p>Last updated: July 23, 2025</p>
+            <p>Last updated: July 27, 2025</p>
             <p>This Cookie Policy explains what cookies are and how we use them on the Operator Uplift website.</p>
             <h3>What Are Cookies?</h3>
             <p>Cookies are small text files that are placed on your computer or mobile device when you visit a website. They are widely used to make websites work, or work more efficiently, as well as to provide information to the owners of the site.</p>
@@ -546,7 +560,7 @@
                     loadingScreen.style.opacity = '0';
                     setTimeout(() => loadingScreen.style.display = 'none', 500);
                 }
-            }, 2000);
+            }, 500);
 
             // --- Custom Cursor ---
             const cursor = document.querySelector('.custom-cursor');
