--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                             <span class="button-text">Get Early Access</span>
                             <svg class="spinner h-5 w-5 ml-3 hidden" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"><circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle><path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path></svg>
                         </button>
-                        <div data-netlify-recaptcha="true"></div>
+                        <div class="g-recaptcha" data-sitekey="6Le2YJErAAAAAIgMhRjbTFYRk-_8Scc0334LSHjO"></div>
                     </form>
                     <div id="form-message" class="mt-4 font-medium h-6" aria-live="polite"></div>
                 </div>
@@ -389,7 +389,6 @@
     <!-- Cookie Consent Banner -->
     <div id="cookie-consent-banner" class="fixed bottom-0 left-0 right-0 p-4 z-50 hidden"><div class="glass-card container mx-auto flex flex-col sm:flex-row items-center justify-between gap-4 p-4 rounded-lg"><p class="text-sm text-slate-300">We use essential cookies to make our site work. For more details, see our <a href="#cookies" class="legal-link text-[var(--accent-color)] hover:underline">Cookie Policy</a> and <a href="#privacy" class="legal-link text-[var(--accent-color)] hover:underline">Privacy Policy</a>.</p><div class="flex gap-3 flex-shrink-0"><button id="cookie-decline" class="px-5 py-2 rounded-lg text-sm font-semibold text-slate-300 hover:bg-zinc-700 transition-colors">Decline</button><button id="cookie-accept" class="px-5 py-2 rounded-lg text-sm font-semibold bg-[var(--accent-color)] text-black hover:bg-[var(--accent-hover)] transition-colors">Accept</button></div></div></div>
 
-    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <script src="https://cdn.jsdelivr.net/npm/tsparticles@2.12.0/tsparticles.bundle.min.js" defer></script>
     
     <script>
